--- a/hr_expense_invoice/views/hr_expense_views.xml
+++ b/hr_expense_invoice/views/hr_expense_views.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="hr_expense_form_view" model="ir.ui.view">
+    <record id="hr_expense_view_form" model="ir.ui.view">
         <field name="name">hr.expense.form</field>
         <field name="model">hr.expense</field>
-        <field name="inherit_id" ref="hr_expense.hr_expense_form_view"/>
+        <field name="inherit_id" ref="hr_expense.hr_expense_view_form"/>
         <field name="arch" type="xml">
             <field name="product_id" position="after">
                 <field name="invoice_id" context="{'default_type': 'in_invoice', 'type': 'in_invoice', 'journal_type': 'purchase'}"/>
