- Do reconciliations per line, so don't group invoices from different partners. - Intercept properly the sheet paid action for not marking it as paid when   reconciling the expense lines that belongs to invoices. - Prevent set invoices paid when sheet paid by company. - Some docstring.
Co-authored-by: Pedro M. Baeza <pedro.baeza@tecnativa.com>
Co-authored-by: Víctor Martínez <victor.martinez@tecnativa.com>

--- a/hr_expense_invoice/views/hr_expense_views.xml
+++ b/hr_expense_invoice/views/hr_expense_views.xml
@@ -22,6 +22,11 @@
                                                           'tax_ids': tax_ids, }], }"
                 />
             </field>
+            <field name="tax_ids" position="attributes">
+                <attribute
+                    name="attrs"
+                >{'invisible': [('invoice_id', '!=', False)]}</attribute>
+            </field>
         </field>
     </record>
     <record id="action_expense_create_invoice" model="ir.actions.act_window">
