--- a/hr_expense_invoice/views/hr_expense_views.xml
+++ b/hr_expense_invoice/views/hr_expense_views.xml
@@ -5,15 +5,24 @@
         <field name="inherit_id" ref="hr_expense.hr_expense_view_form" />
         <field name="groups_id" eval="[(4, ref('account.group_account_invoice'))]" />
         <field name="arch" type="xml">
+            <field name="unit_amount" position="attributes">
+                <attribute name="force_save">1</attribute>
+            </field>
+            <field name="quantity" position="attributes">
+                <attribute name="force_save">1</attribute>
+                <attribute
+                    name="attrs"
+                >{'invisible': [('invoice_id', '!=', False)]}</attribute>
+            </field>
             <field name="product_id" position="after">
                 <field
                     name="invoice_id"
                     context="{'default_type': 'in_invoice',
                             'type': 'in_invoice',
                             'journal_type': 'purchase',
-                            'default_reference': reference,
-                            'default_date_invoice': date,
-                            'default_invoice_line_ids': [{'product_id': product_id,
+                            'default_ref': reference,
+                            'default_invoice_date': date,
+                            'default_line_ids': [{'product_id': product_id,
                                                           'name': name,
                                                           'price_unit': unit_amount,
                                                           'quantity': quantity,
