[FIX] hr_expense_invoice: Force save unit_amount expense (when invoice is set)

--- a/hr_expense_invoice/views/hr_expense_views.xml
+++ b/hr_expense_invoice/views/hr_expense_views.xml
@@ -49,6 +49,7 @@
                 position="after"
             >
                 <field name="invoice_id" />
+                <field name="quantity" invisible="1" />
             </xpath>
             <xpath
                 expr="//field[@name='expense_line_ids']/tree/field[@name='total_amount']"
