[FIX] hr_expense_invoice: do not display UoM and quantity label
Hide quantity label and UoM field when selecting an invoice, as
it is done with quantity field.

hr_expense_invoice 15.0.1.1.0

--- a/hr_expense_invoice/views/hr_expense_views.xml
+++ b/hr_expense_invoice/views/hr_expense_views.xml
@@ -8,7 +8,18 @@
             <field name="unit_amount" position="attributes">
                 <attribute name="force_save">1</attribute>
             </field>
+            <label for="quantity" position="attributes">
+                <attribute
+                    name="attrs"
+                >{'invisible': [('invoice_id', '!=', False)]}</attribute>
+            </label>
             <field name="quantity" position="attributes">
+                <attribute name="force_save">1</attribute>
+                <attribute
+                    name="attrs"
+                >{'invisible': [('invoice_id', '!=', False)]}</attribute>
+            </field>
+            <field name="product_uom_id" position="attributes">
                 <attribute name="force_save">1</attribute>
                 <attribute
                     name="attrs"
