[MIG] hr_expense_invoice: Migration to 17.0
Actions performed:
- Deprecated `hr.expense.reference` field as part of [1].
- Merged the `hr.expense.is_editable` and `hr.expense.sheet_is_editable`
  fields as part of [1].
- Renamed `hr.expense.unit_amount` to `hr.expense.price_unit`.
- Renamed `hr.expense.attachment_number` to `hr.expense.nb_attachment`.
- Renamed `hr.expense.approve_expense_sheets()` to
  `hr.expense.action_approve_expense_sheets()`.
- Renamed `hr.expense.account_move_id` to `hr.expense.account_move_ids`.
- Renamed `hr.expense.total_amount` to
  `hr.expense.total_amount_currency`.
- Inherit compute of `hr.expense.sheet.state` to consider expenses with
  linked invoices.
- Switched from old %-based string formatting to f-strings.
- Replaced the use of `attrs` in views with their equivalent Python
  expressions as part of [2].
- Adapted the `hr.expense.sheet` records creation in tests.
- Updated to use the employee partner from `hr.employee.work_contact_id`
  instead of `hr.employee.address_home_id` since it has been split into
  multiple fields.
- Added the `hr.expense.amount_residual` field to maintain the one
  invoice per expense functionality.
- Adapted test assertions for `hr.expense.sheet.state` since it is now
  a computed field.

Co-authored-by: desdelinux <luigys@vauxoo.com>

[1]: https://github.com/odoo/odoo/pull/130244
[2]: https://github.com/odoo/odoo/pull/104741

--- a/hr_expense_invoice/views/account_move_views.xml
+++ b/hr_expense_invoice/views/account_move_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="view_move_form" model="ir.ui.view">
         <field name="name">account.move.form - Add expense smart-button</field>
@@ -11,10 +12,12 @@
                     icon="fa-file-text-o"
                     name="action_view_expense"
                     groups="account.group_account_invoice"
+                    invisible="not expense_ids"
                     type="object"
-                    attrs="{'invisible': [('expense_ids', '=', [])]}"
                 >
-                    <span>Expense</span>
+                    <span>
+                        Expense
+                    </span>
                 </button>
             </div>
         </field>
